--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easyglideslider",
   "version": "1.0.0",
-  "description": "Easy Glide Slider is a free and user-friendly WordPress plugin that brings the power of GlideJS to effortlessly customize stunning image carousels and slideshows on your website.",
+  "description": "Easy Glide Slider is a free and user-friendly WordPress plugin that utilizes Glide.js to create beautiful and interactive sliders in Gutenberg blocks.",
   "main": "easyglideslidermain.js",
   "scripts": {
     "build": "wp-scripts start",
@@ -12,12 +12,11 @@
   },
   "keywords": [],
   "author": "Melih Aktop",
-  "license": "ISC",
+  "license": "LGPL-2.1-or-later",
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
     "@wordpress/blocks": "*",
     "@wordpress/data": "^9.8.0",
-    "@wordpress/icons": "^9.29.0",
     "@wordpress/scripts": "*"
   }
 }
